--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "tailwind-init": "tailwindcss init -p"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
